--- a/css/style.css
+++ b/css/style.css
@@ -11,21 +11,55 @@ body {
 	font-weight: 400;
 }
 
+p, h1 {
+	letter-spacing: -0.03em;
+}
+
 /* Container */
 
 .container {
 	margin: 0 auto;
-	padding: 0 15px;
+	padding: 0 123px 0 124px;
 	width: 100%;
-	max-width: 1183px;
+	max-width: 1400px;
 }
 
 /* Header */
+
+.header {
+	background: url(../img/intro__bg.png) no-repeat center;
+	background-size: cover;
+	width: 100%;
+	height: 100vh;
+}
 
 .header__inner {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	padding-top: 27px;
+	position: relative;
+}
+
+.header__text {
+	margin-bottom: 29px;
+	width: 430px;
+	font-size: 20px;
+	line-height: 26px;
+	position: absolute;
+	top: 249px;
+	left: 125px;
+}
+
+.header__title {
+	position: absolute;
+	top: 381px;
+	left: 119px;
+	width: 919px;
+	font-size: 80px;
+	line-height: 70px;
+	color: #1bff07;
+
 }
 
 /* Nav */
