--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,14 @@ p, h1, h2, h3 {
 	padding: 150px 0;
 }
 
+.section__contacts {
+	width: 100%;
+	height: 717px;
+	background: url(../img/contacts-bg.png) no-repeat center;
+	background-size: cover;
+	border-radius: 30px;
+}
+
 .section__title {
 	margin-bottom: 40px;
 	font-size: 55px;
@@ -179,3 +187,33 @@ p, h1, h2, h3 {
 	color: #1bff07;
 	background-color: #000;
 }
+
+/* Contacts */
+
+.contacts__title {
+	margin-bottom: 28px;
+	font-size: 35px;
+	line-height: 60px;
+}
+
+.contact__info {
+	margin-bottom: 20px;
+}
+
+.contact__info:last-child {
+	margin-bottom: 0;
+}
+
+.contact__link {
+	font-size: 60px;
+	line-height: 60px;
+	text-decoration: none;
+	color: #fff;
+	transition: color .2s ease-out;
+}
+
+.contact__link:hover {
+	color: #1bff07;
+}
+
+
