--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-	background-color: #000;
 	color: #fff;
 	font-family: 'IBM Plex Mono', monospace;
 	font-weight: 400;
@@ -59,7 +58,12 @@ p, h1, h2, h3 {
 	font-size: 80px;
 	line-height: 70px;
 	color: #1bff07;
+}
 
+/* Main */
+
+.main {
+	background-color: #000;
 }
 
 /* Nav */
@@ -216,4 +220,35 @@ p, h1, h2, h3 {
 	color: #1bff07;
 }
 
+/* Footer */
+.footer {
+	position: relative;
+	padding: 76px 0 92px;
+	background-color: #fff;
+	border-radius: 30px;
+}
 
+.footer::after {
+	content: "";
+	position: absolute;
+	top: 174px;
+	left: 0;
+	width: 100%;
+	height: 121px;
+	opacity: .5;
+}
+
+.footer__text {
+	margin-bottom: 66px;
+	font-family: 'Manrope', sans-serif;
+	font-size: 22px;
+	line-height: 30.5px;
+	color: #000;
+}
+
+.footer__copyright {
+	font-family: 'Manrope', sans-serif;
+	font-size: 20px;
+	line-height: 27px;
+	color: rgba(0, 0, 0, .5);
+}
