--- a/css/style.css
+++ b/css/style.css
@@ -116,32 +116,18 @@ p, h1, h2, h3 {
 
 /* Projects */
 
-.project__item {
-	position: relative;
-}
-
-.project__item:last-child {
+.projects {
 	margin-bottom: 80px;
 }
 
-.project__inner {
+.project__item {
 	position: relative;
-	width: 100%;
-	max-width: 1150px;
-	height: 550px;
-	
-}
-
-.project__img {
-	width: 100%;
-	max-width: 1150px;
-	height: 550px;
-	border: 1px solid #000;
 	border-radius: 30px;
 	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, .25);
+	overflow: hidden;
 }
 
-.project__inner::after {
+.project__item::after {
 	content: "";
 	display: block;
 	width: 100%;
@@ -150,19 +136,38 @@ p, h1, h2, h3 {
 	top: 0;
 	left: 0;
 	background-image: linear-gradient(rgba(0, 0, 0, 0) 0%, #000 100%);
+	z-index: 1;
+}
+
+.project__preview {
+	display: block;
+	width: 100%;
+	max-width: 1150px;
+	height: 550px;
+	border: 1px solid #000;
 	border-radius: 30px;
 }
 
-.project__dec {
+.project__description {
 	position: absolute;
 	bottom: 50px;
 	left: 50px;
+	z-index: 3;
 }
 
 .project__title {
 	margin-bottom: 5px;
 	font-size: 35px;
 	line-height: 45.5px;
+}
+
+.project__title a {
+	text-decoration: none;
+	color: #fff;
+}
+
+.project__title:hover {
+	text-decoration: underline;
 }
 
 .project__text {
@@ -265,7 +270,6 @@ p, h1, h2, h3 {
 
 .skils__title {
 	margin-bottom: 15px;
-	width: 651px;
 	font-size: 35px;
 	line-height: 46px;
 	color: #1bff07;
