--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ body {
 	font-weight: 400;
 }
 
+body.no-scroll {
+	overflow: hidden;
+}
+
 p, h1, h2, h3 {
 	letter-spacing: -0.03em;
 }
@@ -18,18 +22,29 @@ p, h1, h2, h3 {
 
 .container {
 	margin: 0 auto;
-	padding: 0 123px 0 124px;
+	padding: 0 15px;
+	max-width: 1183px;
 	width: 100%;
-	max-width: 1400px;
 }
 
 /* Header */
 
 .header {
-	background: url(../img/intro__bg.png) no-repeat center;
+	position: relative;
+	background: url(../img/stol-noutbuk-monitor-klaviatura-banka-karandashi-chashka-kni.jpg) no-repeat center;
 	background-size: cover;
 	width: 100%;
-	height: 100vh;
+	height: 765px;
+}
+
+.header::before {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: #303030;
+	opacity: .6;
+	z-index: 2;
 }
 
 .header__inner {
@@ -38,26 +53,41 @@ p, h1, h2, h3 {
 	align-items: center;
 	padding-top: 27px;
 	position: relative;
+	z-index: 10; 
 }
 
 .header__text {
 	margin-bottom: 29px;
-	width: 430px;
+	max-width: 430px;
 	font-size: 20px;
 	line-height: 26px;
-	position: absolute;
-	top: 249px;
-	left: 125px;
 }
 
+.header__content {
+	position: relative;
+	z-index: 5;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: left;
+	padding: 249px 0 94px;
+	max-width: 912px;
+}
+
+.header__suptitle, 
 .header__title {
-	position: absolute;
-	top: 381px;
-	left: 119px;
-	width: 919px;
+	max-width: 919px;
 	font-size: 80px;
 	line-height: 70px;
-	color: #1bff07;
+	font-weight: 700;
+}
+
+.header__suptitle {
+	margin-bottom: 20px;
+}
+
+.header__title span {
+	color: #fcac45;
 }
 
 /* Main */
@@ -76,18 +106,40 @@ p, h1, h2, h3 {
 	margin-right: 50px;
 	font-size: 18px;
 	line-height: 23px;
-	text-transform: lowercase;
+	text-transform: uppercase;
 	color: #fff;
 	text-decoration: none;
 	transition: color .2s linear;
+	position: relative;
 }
 
 .nav__link:last-child {
 	margin-right: 0;
 }
 
-.nav__link:hover {
-	color: #1bff07;
+.nav__link::after {
+	content: "";
+	height: 3px;
+	width: 0;
+	background-color: #fcac45;
+	position: absolute;
+	bottom: -10px;
+	left: 0;
+	z-index: 1;
+	transition: width .2s linear;
+}
+
+.nav__link:focus {
+	outline: none;
+}
+
+.nav__link:hover,
+.nav__link:focus {
+	color: #fcac45;
+}
+
+.nav__link:hover::after {
+	width: 100%;
 }
 
 /* Section */
@@ -101,17 +153,36 @@ p, h1, h2, h3 {
 }
 
 .section__contacts {
+	position: relative;
 	width: 100%;
 	height: 717px;
-	background: url(../img/contacts-bg.png) no-repeat center;
+	background: url(../img/contacts.jpg) no-repeat center;
 	background-size: cover;
 	border-radius: 30px;
+}
+
+.section__contacts::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	background-color: #303030;
+	opacity: .6;
+	z-index: 2;
 }
 
 .section__title {
 	margin-bottom: 40px;
 	font-size: 55px;
 	line-height: 71.5px;
+}
+
+.section__title-services {
+	margin-bottom: 74px;
+	font-size: 35px;
+	line-height: 46px;
 }
 
 /* Projects */
@@ -135,7 +206,7 @@ p, h1, h2, h3 {
 	position: absolute;
 	top: 0;
 	left: 0;
-	background-image: linear-gradient(rgba(0, 0, 0, 0) 0%, #000 100%);
+	background-image: linear-gradient(rgba(0, 0, 0, 0) 0%, #030615 100%);
 	z-index: 1;
 }
 
@@ -146,6 +217,7 @@ p, h1, h2, h3 {
 	height: 550px;
 	border: 1px solid #000;
 	border-radius: 30px;
+	object-fit: cover;
 }
 
 .project__description {
@@ -180,7 +252,7 @@ p, h1, h2, h3 {
 	width: 582px;
 	height: 153px;
 	padding: 56px 86px;
-	background-color: #1bff07;
+	background-color: #fcac45;
 	color: #000;
 	font-size: 30px;
 	line-height: 39px;
@@ -192,9 +264,47 @@ p, h1, h2, h3 {
 }
 
 .projects__info:hover {
-	border: 1px solid #1bff07;
-	color: #1bff07;
+	border: 1px solid #fcac45;
+	color: #fcac45;
 	background-color: #000;
+}
+
+/* Services */
+
+.services__item {
+	margin-bottom: 137px;
+}
+
+.services__preview {
+	max-width: 1150px;
+	width: 100%;
+	height: 200px;
+	border-radius: 30px;
+	object-fit: cover;
+}
+
+.services__item:last-child { 
+	margin-bottom: 0;
+}
+
+.services__description {
+	padding: 40px;
+	position: relative;
+	background-color: #191C19;
+	border-radius: 30px;
+}
+
+.services__title {
+	margin-bottom: 15px;
+	font-size: 55px;
+	line-height: 72px;
+	color: #fcac45;
+}
+
+.services__text {
+	width: 749px;
+	font-size: 22px;
+	line-height: 29px;
 }
 
 /* Contacts */
@@ -203,6 +313,13 @@ p, h1, h2, h3 {
 	margin-bottom: 28px;
 	font-size: 35px;
 	line-height: 60px;
+	position: relative;
+	z-index: 10;
+}
+
+.contacts {
+	position: relative;
+	z-index: 10;
 }
 
 .contact__info {
@@ -222,25 +339,15 @@ p, h1, h2, h3 {
 }
 
 .contact__link:hover {
-	color: #1bff07;
+	color: #fcac45;
 }
 
 /* Footer */
 .footer {
 	position: relative;
-	padding: 76px 0 92px;
+	padding: 76px 0 24px;
 	background-color: #fff;
 	border-radius: 30px;
-}
-
-.footer::after {
-	content: "";
-	position: absolute;
-	top: 174px;
-	left: 0;
-	width: 100%;
-	height: 121px;
-	opacity: .5;
 }
 
 .footer__text {
@@ -262,6 +369,11 @@ p, h1, h2, h3 {
 
 .skils {
 	margin-bottom: 120px;
+	position: relative;
+}
+
+.title__skils {
+	margin-bottom: 104px;
 }
 
 .skils:last-child {
@@ -272,7 +384,33 @@ p, h1, h2, h3 {
 	margin-bottom: 15px;
 	font-size: 35px;
 	line-height: 46px;
-	color: #1bff07;
+	color: #fcac45;
+}
+
+.skils::before {
+	content: "";
+	width: 45px;
+	height: 45px;
+	position: absolute;
+	border-radius: 10px;
+	bottom: 110%;
+	left: 0;
+}
+
+.skils:nth-child(2):before {
+	background: #fcac45 url(../img/skils/html.png) no-repeat center;
+}
+
+.skils:nth-child(3):before {
+	background: #fcac45 url(../img/skils/js.png) no-repeat center;
+}
+
+.skils:nth-child(4):before {
+	background: #fcac45 url(../img/skils/library.png) no-repeat center;
+}
+
+.skils:nth-child(5):before {
+	background: #fcac45 url(../img/skils/adaptive.png) no-repeat center;
 }
 
 .skils__description {
@@ -280,3 +418,206 @@ p, h1, h2, h3 {
 	font-size: 22px;
 	line-height: 29px;
 }
+
+
+/* Burger
+    ========================== */
+
+.burger {
+	padding: 9px 2px;
+	display: none;
+	border: 0;
+	background: none
+	}
+	
+.burger__icon {
+	display: block;
+	width: 30px;
+	height: 3px;
+	background-color: #fff;
+	font-size: 0;
+	color: transparent;
+	position: relative;
+	cursor: pointer;	
+}
+	
+.burger__icon:before,
+.burger__icon:after{
+	content: "";
+	width: 70%;
+	height: 100%;
+	position: absolute;
+	left: 0;
+	z-index: 1;
+	background-color: #fff;
+	transition: all .2s ease-in-out;
+	}
+	
+.burger__icon:before {
+	top: -8px;
+	}
+	
+.burger__icon:after {
+	bottom: -8px;
+	}
+ 
+.burger__icon.show {
+	background-color: transparent;
+}
+
+.burger__icon.show::before {
+	top: -50%;
+	transform: rotate(-45deg);
+}
+
+.burger__icon.show::after {
+	bottom: 50%;
+	transform: rotate(45deg);
+}
+
+
+
+
+
+
+	
+	/* .modal__overlay {
+		position: fixed;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background: rgba(0,0,0,0.6);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	} */
+	.modal__container {
+		position: relative;
+		z-index: 10;
+		background-color: #343434;
+		padding: 30px;
+		width: 380px;
+		height: 450px;
+		border-radius: 4px;
+		overflow-y: auto;
+		box-sizing: border-box;
+	}
+
+	.modal__content {
+		margin-top: 32px;
+		margin-bottom: 32px;
+	}
+	.modal__header {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	.modal__title {
+		margin-top: 0;
+		margin-bottom: 0;
+		font-weight: 600;
+		font-size: 1.25rem;
+		line-height: 1.25;
+		color: #fff;
+		text-transform: uppercase;
+		width: 100%;
+	}
+
+.modal__input {
+	margin-bottom: 8px;
+	}
+
+	.form-input {
+		background-color: #303030;
+		border: 1px solid #424242;
+		color: #fff;
+		display: block;
+    font-size: 15px;
+    min-width: 280px;
+    padding: 12px 18px;
+		transition: border .25s ease-in;
+		outline: none;
+	}
+
+.form-input:focus {
+	border: 1px solid #636363;
+	}
+	
+	.modal__header,
+	.modal__content {
+		margin-top: 2rem;
+		margin-bottom: 2rem;
+		line-height: 1.5;
+		color: rgba(0,0,0,.8);
+	}
+
+.modal__footer {
+	text-align: center;
+}
+
+	.button {
+    background-color: #f57500;
+    border: none;
+    color: #fff;
+    display: inline-block;
+    font-size: 10px;
+    font-weight: 800;
+    letter-spacing: 2px;
+    padding: 14px 26px;
+    text-transform: uppercase;
+}
+
+.button:before {
+	background-color: #303030;
+	content: "";
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	transition: width .5s ease-out;
+  width: 0;
+	}
+
+	.button:hover:before {
+    width: 100%;
+}
+
+
+	.modal__btn {
+		font-size: .875rem;
+		padding-left: 1rem;
+		padding-right: 1rem;
+		padding-top: .5rem;
+		padding-bottom: .5rem;
+		background-color: #e6e6e6;
+		color: rgba(0,0,0,.8);
+		border-radius: .25rem;
+		border-style: none;
+		border-width: 0;
+		cursor: pointer;
+		text-transform: none;
+		overflow: visible;
+		line-height: 1.15;
+		margin: 0;
+		will-change: transform;
+		-moz-osx-font-smoothing: grayscale;
+		-webkit-backface-visibility: hidden;
+		backface-visibility: hidden;
+		-webkit-transform: translateZ(0);
+		transform: translateZ(0);
+		transition: -webkit-transform .25s ease-out;
+		transition: transform .25s ease-out;
+		transition: transform .25s ease-out,-webkit-transform .25s ease-out;
+	}
+	.modal__btn:focus, .modal__btn:hover {
+		-webkit-transform: scale(1.05);
+		transform: scale(1.05);
+	}
+	.modal__btn-primary {
+		background-color: #00449e;
+		color: #fff;
+	}
+	
+	
+	
