--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,7 @@ p, h1, h2, h3 {
 }
 
 .section__contacts {
+	padding: 100px;
 	position: relative;
 	width: 100%;
 	height: 717px;
@@ -249,7 +250,7 @@ p, h1, h2, h3 {
 
 .projects__info {
 	display: block;
-	width: 582px;
+	max-width: 582px;
 	height: 153px;
 	padding: 56px 86px;
 	background-color: #fcac45;
@@ -476,148 +477,115 @@ p, h1, h2, h3 {
 }
 
 
+.contacts {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.social {
+	width: 50%;
+}
+
+.social__info {
+	margin-bottom: 20px;
+}
+
+.social__info:last-child {
+	margin-bottom: 0;
+}
+
+.social__title {
+	margin-bottom: 28px;
+	font-size: 35px;
+	line-height: 60px;
+}
 
 
 
 
-	
-	/* .modal__overlay {
-		position: fixed;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		background: rgba(0,0,0,0.6);
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	} */
-	.modal__container {
-		position: relative;
-		z-index: 10;
-		background-color: #343434;
-		padding: 30px;
-		width: 380px;
-		height: 450px;
-		border-radius: 4px;
-		overflow-y: auto;
-		box-sizing: border-box;
+.form__container {
+	padding: 30px;
+	max-width: 500px;
+	max-height: 100vh;
+	background-color: #343434;
+	box-shadow: 0 0 0 8px rgba(255, 255, 255, .1);
+	border-radius: 4px;
+	overflow-y: auto;
+}
+
+.form__content {
+	margin: 32px 0;
 	}
 
-	.modal__content {
-		margin-top: 32px;
-		margin-bottom: 32px;
-	}
-	.modal__header {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	}
-	.modal__title {
-		margin-top: 0;
-		margin-bottom: 0;
-		font-weight: 600;
-		font-size: 1.25rem;
-		line-height: 1.25;
-		color: #fff;
-		text-transform: uppercase;
-		width: 100%;
-	}
+.modal__header {
+	text-align: center;
+}
 
-.modal__input {
+.modal__title {
+	width: 100%;
+	font-size: 20px;
+	font-weight: 600;
+	line-height: 25px;
+	color: #fff;
+	text-transform: uppercase;
+}
+
+.form-input {
 	margin-bottom: 8px;
+	padding: 12px 18px;
+	display: block;
+	min-width: 280px;
+	font-size: 15px;
+	color: #fff;
+	background-color: #303030;
+	border: 1px solid #424242;
+	transition: border .25s ease-in;
+	outline: none;
 	}
 
-	.form-input {
-		background-color: #303030;
-		border: 1px solid #424242;
-		color: #fff;
-		display: block;
-    font-size: 15px;
-    min-width: 280px;
-    padding: 12px 18px;
-		transition: border .25s ease-in;
-		outline: none;
-	}
+.form__textarea {
+	min-height: 100px;
+	resize: none;
+}
 
 .form-input:focus {
 	border: 1px solid #636363;
-	}
+}
 	
-	.modal__header,
-	.modal__content {
-		margin-top: 2rem;
-		margin-bottom: 2rem;
-		line-height: 1.5;
-		color: rgba(0,0,0,.8);
-	}
+/* .modal__header,
+.modal__content {
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	line-height: 1.5;
+	color: rgba(0,0,0,.8);
+	} */
 
 .modal__footer {
 	text-align: center;
 }
 
-	.button {
-    background-color: #f57500;
-    border: none;
-    color: #fff;
-    display: inline-block;
-    font-size: 10px;
-    font-weight: 800;
-    letter-spacing: 2px;
-    padding: 14px 26px;
-    text-transform: uppercase;
+.form__button {
+	display: block;
+	background-color: #f57500;
+	border: 1px solid #f57500;
+	color: #fff;
+	display: inline-block;
+	font-size: 10px;
+	font-weight: 800;
+	letter-spacing: 2px;
+	padding: 14px 26px;
+	border-radius: 10px;
+	text-transform: uppercase;
+	transition: background-color .2s ease-in, border .2s ease-in;
 }
 
-.button:before {
-	background-color: #303030;
-	content: "";
-	height: 100%;
-	left: 0;
-	position: absolute;
-	top: 0;
-	transition: width .5s ease-out;
-  width: 0;
-	}
-
-	.button:hover:before {
-    width: 100%;
+.form__button:hover {
+	background-color: #343434;
 }
 
 
-	.modal__btn {
-		font-size: .875rem;
-		padding-left: 1rem;
-		padding-right: 1rem;
-		padding-top: .5rem;
-		padding-bottom: .5rem;
-		background-color: #e6e6e6;
-		color: rgba(0,0,0,.8);
-		border-radius: .25rem;
-		border-style: none;
-		border-width: 0;
-		cursor: pointer;
-		text-transform: none;
-		overflow: visible;
-		line-height: 1.15;
-		margin: 0;
-		will-change: transform;
-		-moz-osx-font-smoothing: grayscale;
-		-webkit-backface-visibility: hidden;
-		backface-visibility: hidden;
-		-webkit-transform: translateZ(0);
-		transform: translateZ(0);
-		transition: -webkit-transform .25s ease-out;
-		transition: transform .25s ease-out;
-		transition: transform .25s ease-out,-webkit-transform .25s ease-out;
-	}
-	.modal__btn:focus, .modal__btn:hover {
-		-webkit-transform: scale(1.05);
-		transform: scale(1.05);
-	}
-	.modal__btn-primary {
-		background-color: #00449e;
-		color: #fff;
-	}
+	
 	
 	
 	
