--- a/css/media.css
+++ b/css/media.css
@@ -3,7 +3,7 @@
 	/* Nav */
 	.nav {
 		display: none; 
-		flex-direction: column;
+		/* flex-direction: column; */
 		width: 100%;
 		height: 100vh;
 		text-align: center;
@@ -13,10 +13,16 @@
 		bottom: 0;
 		right: 0;
 		right: 0;
-		padding: 80px;
+		/* padding: 80px; */
 		overflow: auto;
 		background: rgba(0, 0, 0, 0.9);
 	}
+
+		.nav__list {
+			margin: auto;
+			display: flex;
+			flex-direction: column;
+		}
 
 	.nav__link {
 		font-size: 30px;
