--- a/css/styles/header.css
+++ b/css/styles/header.css
@@ -1,6 +1,6 @@
 .header {
 	position: relative;
-	background: url(../../../img/stol-noutbuk-monitor-klaviatura-banka-karandashi-chashka-kni.jpg) no-repeat center;
+	background: url(../../img/stol-noutbuk-monitor-klaviatura-banka-karandashi-chashka-kni.jpg) no-repeat center;
 	background-size: cover;
 	width: 100%;
 	height: 765px;
