--- a/css/styles/header.css
+++ b/css/styles/header.css
@@ -1,9 +1,9 @@
 .header {
 	position: relative;
-	background: url(../../../img/stol-noutbuk-monitor-klaviatura-banka-karandashi-chashka-kni.jpg) no-repeat center;
-	background-size: cover;
 	width: 100%;
 	height: 765px;
+	background: url(../../img/intro_bg.jpg) no-repeat center;
+	background-size: cover;
 }
 
 .header::before {
@@ -25,13 +25,6 @@
 	z-index: 10; 
 }
 
-.header__text {
-	margin-bottom: 29px;
-	max-width: 430px;
-	font-size: 20px;
-	line-height: 26px;
-}
-
 .header__content {
 	position: relative;
 	z-index: 5;
@@ -41,6 +34,13 @@
 	text-align: left;
 	padding: 249px 0 94px;
 	max-width: 912px;
+}
+
+.header__text {
+	margin-bottom: 29px;
+	max-width: 430px;
+	font-size: 20px;
+	line-height: 26px;
 }
 
 .header__suptitle, 
