--- a/css/media.css
+++ b/css/media.css
@@ -11,7 +11,7 @@
 		left: 0;
 		bottom: 0;
 		right: 0;
-		padding: 30px;
+		padding: 25px;
 		overflow: auto;
 		background: rgba(0, 0, 0, 0.9);
 	}
@@ -41,25 +41,18 @@
 	}
 
 	/* Burger */
-
 	.burger {
 		display: block;
 	}
 
+	/* Header */
 	.header__suptitle, 
 	.header__title {
 		font-size: 60px;
 		line-height: 69px;
 	}
 
-.skils__description {
-	width: 100%;
-	font-size: 22px;
-	line-height: 29px;
-	}
-
 	/* Section */
-
 	.section {
 		padding-bottom: 100px;
 	}
@@ -67,33 +60,37 @@
 	.section:first-child {
 		padding: 100px 0 ;
 	}
-/* .section__title {
-	margin-bottom: 20px;
-	font-size: 40px;
-	line-height: 56.5px;
-} */
 
-/* Projects */
-.project__preview {
-	height: 536px;
+	/* Projects */
+	.project__preview {
+		height: 536px;
+	}
+
+	.projects__info {
+		padding: 50px 80px;
+	}
+
+	/* Skills */
+	.skils__description {
+		width: 100%;
+		font-size: 22px;
+		line-height: 29px;
+	}
+
+	/* Services */
+	.services__item {
+		margin-bottom: 100px;
+	}
+
+	.services__title {
+		font-size: 45px;
+		line-height: 51px;
+	}
 }
 
-.projects__info {
-	padding: 50px 80px;
-}
 
-.services__item {
-	margin-bottom: 100px;
-}
+@media (max-width: 768px) {
 
-.services__title {
-	font-size: 45px;
-	line-height: 62px;
-}
-}
-
-
-@media (max-width: 767px) {
 	/* Header */
 	.header {
 		height: auto;
@@ -111,7 +108,7 @@
 		margin-bottom: 20px;
 		font-size: 18px;
 		line-height: 24px;
-}
+	}
 
 	.header__suptitle,
 	.header__title {
@@ -121,141 +118,189 @@
 
 	.header__suptitle {
 		margin-bottom: 15px;
-}
+	}
 
-.section {
-	padding-bottom: 80px;
-}
+	/* Section */
+	.section {
+		padding-bottom: 80px;
+	}
 
-.section:first-child {
-	padding: 80px 0 ;
-}
+	.section:first-child {
+		padding: 80px 0 ;
+	}
 
-.projects {
-	margin-bottom: 50px;
-}
+	.section__title {
+		font-size: 45px;
+		line-height: 61.5px;
+	}
 
-.project__preview {
-	height: 250px;
-}
+	.section__contacts {
+		height: 517px;
+		}
 
-.projects__info {
-	display: block;
-	padding: 25px 30px;
-	font-size: 16px;
-	line-height: 21px;
-}
+	/* Projects */
+	.projects {
+		margin-bottom: 50px;
+	}
 
-.skills::before {
-	bottom: 103%
-}
+	.project__preview {
+		height: 450px;
+	}
 
+	.projects__info {
+		display: block;
+		padding: 25px 30px;
+		font-size: 16px;
+		line-height: 21px;
+	}
+
+	/* Skills */
+	.skills::before {
+		bottom: 103%
+	}
+
+	/* Services */
+	.services__title {
+		font-size: 40px;
+		line-height: 46px;
+	}
+
+	.services__description {
+		padding: 20px
+	}
+
+	/* Contacts */
+	.contacts__social-wrapper {
+		top: 87px;
+		left: 15px;
+	}
+
+	/* Footer */
+	.footer {
+		padding-top: 50px;
+	}
+
+	.footer__text {
+		margin-bottom: 40px;
+	}
 }
 
 @media (max-width: 447px) {
 
-.header__text {
-	margin-bottom: 15px;
-	font-size: 15px;
-	line-height: 21px;
-}
-
-.header__suptitle,
-.header__title {
-	font-size: 25px;
-	line-height: 25px;
+	/* header */
+	.header__text {
+		margin-bottom: 15px;
+		font-size: 15px;
+		line-height: 21px;
 	}
 
-.header__suptitle {
-	margin-bottom: 10px;
-}
+	.header__suptitle,
+	.header__title {
+		font-size: 25px;
+		line-height: 25px;
+	}
 
-.section__services-title {
-	margin-bottom: 50px;
-	font-size: 30px;
-  line-height: 41px;
-}
+	.header__suptitle {
+		margin-bottom: 10px;
+	}
 
-.section__contacts {
-	height: 450px;
-}
+	/* Section */
+	.section__services-title {
+		margin-bottom: 50px;
+		font-size: 30px;
+		line-height: 41px;
+	}
 
-/* Projects */
-.section__title {
-	/* margin-bottom: 15px; */
-	font-size: 35px;
-	line-height: 41.5px;
-}
+	.section__contacts {
+		height: 450px;
+	}
 
-.project__description {
-	bottom: 15px;
-	left: 15px;
-}
+	.section__title {
+		font-size: 35px;
+		line-height: 41.5px;
+	}
 
-.project__title {
-	font-size: 25px;
-	line-height: 35px;
-}
+	/* Projects */
+	.project__preview {
+		height: 250px;
+	}
 
-.project__text {
-	font-size: 20px;
-	line-height: 29px;
-}
+	.project__description {
+		bottom: 15px;
+		left: 15px;
+	}
 
-.services__description {
-	padding: 20px;
-}
+	.project__title {
+		font-size: 25px;
+		line-height: 32px;
+	}
 
-.services__title {
-	font-size: 25px;
-	line-height: 35px;
-}
+	.project__text {
+		font-size: 20px;
+		line-height: 29px;
+	}
 
-.services__text {
-	font-size: 18px;
-	line-height: 25px;
-}
+	/* Services */
+	.services__description {
+		padding: 20px;
+	}
 
-.services__item {
-	margin-bottom: 70px;
-}
+	.services__title {
+		font-size: 25px;
+		line-height: 35px;
+	}
 
-.skills__title {
-	font-size: 28px;
-	line-height: 38px;
-}
+	.services__text {
+		font-size: 18px;
+		line-height: 25px;
+	}
 
-.skills__description {
-	font-size: 18px;
-	line-height: 24px;
-}
+	.services__item {
+		margin-bottom: 70px;
+	}
 
-.contacts__social-wrapper {
-	top: 120px;
-}
+	/* Skills */
+	.skills__title {
+		font-size: 28px;
+		line-height: 38px;
+	}
 
-.contacts__social-title {
-	margin-bottom: 20px;
-} 
+	.skills__description {
+		font-size: 18px;
+		line-height: 24px;
+	}
 
-.contact__social-link {
-	font-size: 50px;
-  line-height: 50px;
-}
+	/* Contacts */
+	.contacts__social-wrapper {
+		top: 120px;
+	}
 
-.footer {
-	padding: 50px 0 24px;
-}
+	.contacts__social-title {
+		margin-bottom: 20px;
+	} 
 
-.footer__text {
-	margin-bottom: 45px;
-	font-size: 18px;
-	line-height: 26px;
-}
+	.contact__social-link {
+		font-size: 50px;
+		line-height: 50px;
+	}
 
-.footer__copyright {
-	font-size: 16px;
-  line-height: 23px;
-}
+	/* Footer */
+	.footer {
+		padding: 50px 0 24px;
+	}
 
+	.footer__info {
+		text-align: center;
+	}
+
+	.footer__text {
+		margin-bottom: 25px;
+		font-size: 18px;
+		line-height: 26px;
+	}
+
+	.footer__copyright {
+		font-size: 16px;
+		line-height: 23px;
+	}
 }
