--- a/css/styles/footer.css
+++ b/css/styles/footer.css
@@ -2,7 +2,7 @@
 	position: relative;
 	padding: 76px 0 24px;
 	background-color: #fff;
-	border-radius: 30px;
+	border-radius: 30px 30px 0 0;
 }
 
 .footer__text {
