--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ p, h1, h2, h3 {
 	background-color: #303030;
 	opacity: .6;
 	z-index: 2;
+	border-radius: 30px;
 }
 
 .section__title {
@@ -83,6 +84,40 @@ p, h1, h2, h3 {
 	margin-bottom: 74px;
 	font-size: 35px;
 	line-height: 46px;
+}
+
+/* Social */
+.social {
+	display: flex;
+}
+
+.social__item {
+	margin-right: 24px;
+}
+
+.social__item-link {
+	width: 50px;
+	height: 50px;
+	background-color: #fff;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.social__icon {
+	display: block;
+	height: 45px;
+	fill: #000;
+	opacity: .4;
+	transition: fill .2s ease-in, opacity .2s ease-in;
+}
+
+.social__icon:hover,
+.social__icon:focus, 
+.social__icon:active {
+	outline: none;
+	opacity: 1;
+	fill: #fcac45;
 }
 
 
