--- a/css/styles/burger.css
+++ b/css/styles/burger.css
@@ -1,13 +1,15 @@
 .burger {
-	padding: 9px 2px;
+	padding: 19px 13px;
 	display: none;
 	border: 0;
-	background: none
+	background: none;
+	width: 63px;
+	height: 63px;
 	}
 	
 .burger__icon {
 	display: block;
-	width: 30px;
+	width: 36px;
 	height: 3px;
 	background-color: #fff;
 	font-size: 0;
@@ -21,6 +23,7 @@
 	content: "";
 	width: 70%;
 	height: 100%;
+	height: 3px;
 	position: absolute;
 	left: 0;
 	z-index: 1;
