--- a/css/styles/footer.css
+++ b/css/styles/footer.css
@@ -1,12 +1,17 @@
 .footer {
-	position: relative;
 	padding: 76px 0 24px;
 	background-color: #fff;
 	border-radius: 30px 30px 0 0;
 }
 
-.footer__text {
+.footer__info {
 	margin-bottom: 66px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.footer__info-text {
 	font-family: 'Manrope', sans-serif;
 	font-size: 22px;
 	line-height: 30.5px;
@@ -14,6 +19,11 @@
 }
 
 .footer__copyright {
+	display: flex;
+	justify-content: space-between;
+}
+
+.footer__copyright-text {
 	font-family: 'Manrope', sans-serif;
 	font-size: 20px;
 	line-height: 27px;
