--- a/css/style.css
+++ b/css/style.css
@@ -48,13 +48,13 @@ p, h1, h2, h3 {
 }
 
 .section__contacts {
-	/* padding: 100px; */
+	padding: 100px 0;
 	position: relative;
 	width: 100%;
 	height: 717px;
 	background: url(../img/contacts.jpg) no-repeat center;
 	background-size: cover;
-	border-radius: 30px;
+	/* border-radius: 30px; */
 }
 
 .section__contacts::before {
@@ -67,7 +67,7 @@ p, h1, h2, h3 {
 	background-color: #303030;
 	opacity: .6;
 	z-index: 2;
-	border-radius: 30px;
+	/* border-radius: 30px; */
 }
 
 .section__title {
