--- a/css/styles/footer.css
+++ b/css/styles/footer.css
@@ -1,7 +1,7 @@
 .footer {
 	padding: 76px 0 24px;
 	background-color: #fff;
-	border-radius: 30px 30px 0 0;
+	/* border-radius: 30px 30px 0 0; */
 }
 
 .footer__info {
