--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 @import url(styles/projects.css);
 @import url(styles/skills.css);
 @import url(styles/services.css);
-@import url(styles/contacts.css);
+@import url(styles/form.css);
 @import url(styles/footer.css);
 
 *,
@@ -48,16 +48,16 @@ p, h1, h2, h3 {
 }
 
 .section__contacts {
-	padding: 100px 0;
+	padding: 150px 0;
 	position: relative;
 	width: 100%;
 	height: 717px;
-	background: url(../img/contacts.jpg) no-repeat center;
+	background: url(../img/contacts\ 2.png) no-repeat center;
 	background-size: cover;
 	/* border-radius: 30px; */
 }
 
-.section__contacts::before {
+/* .section__contacts::before {
 	content: "";
 	position: absolute;
 	top: 0;
@@ -67,8 +67,8 @@ p, h1, h2, h3 {
 	background-color: #303030;
 	opacity: .6;
 	z-index: 2;
-	/* border-radius: 30px; */
-}
+	border-radius: 30px;
+} */
 
 .section__title {
 	margin-bottom: 40px;
