--- a/css/styles/form.css
+++ b/css/styles/form.css
@@ -1,20 +1,11 @@
-.contacts__title {
-	margin-bottom: 60px;
-	position: relative;
-	z-index: 10;
-	max-width: 553px;
-	font-size: 60px;
-	line-height: 60px;
+.form__wrapper {
+	display: flex;
+	justify-content: center;
 }
 
 .form__container {
-	position: relative;
-	top: 60px;
-	left: 0;
-	z-index: 10;
 	padding: 30px;
 	width: 50%;
-	/* max-width: 340px; */
 	max-height: 100vh;
 	background-color: #343434;
 	box-shadow: 0 0 0 8px rgba(255, 255, 255, .1);
@@ -22,17 +13,9 @@
 	overflow-y: auto;
 }
 
-.form__content {
-	margin: 32px 0;
-	/* margin-bottom: 32px; */
-	}
-
-.modal__header {
-	text-align: center;
-}
-
-.modal__title {
+.form__title {
 	width: 100%;
+	text-align: center;
 	font-size: 20px;
 	font-weight: 600;
 	line-height: 25px;
@@ -40,19 +23,22 @@
 	text-transform: uppercase;
 }
 
+.form__content {
+	margin: 32px 0;
+}
+
 .form-input {
 	margin-bottom: 8px;
 	padding: 12px 18px;
 	display: block;
 	width: 100%;
-	/* min-width: 280px; */
 	font-size: 15px;
 	color: #fff;
 	background-color: #303030;
 	border: 1px solid #424242;
 	transition: border .25s ease-in;
 	outline: none;
-	}
+}
 
 .form__textarea {
 	min-height: 100px;
@@ -63,34 +49,32 @@
 	border: 1px solid #636363;
 }
 
-/* .modal__footer {
-	text-align: center;
-} */
-
 .form__button {
 	display: block;
-	background-color: #f57500;
-	border: 1px solid #f57500;
+	background-color: #fcac45;
+	border: 1px solid #fcac45;
 	color: #fff;
 	display: inline-block;
 	width: 80%;
+	font-family: 'IBM Plex Mono', monospace;
 	font-size: 10px;
 	font-weight: 800;
 	letter-spacing: 2px;
 	padding: 14px 30px;
 	border-radius: 10px;
 	text-transform: uppercase;
+	cursor: pointer;
 	transition: background-color .2s ease-in, border .2s ease-in;
 }
 
-.form__button:hover {
+.form__button:hover,
+.form__button:focus,
+.form__button:active {
+	outline: none;
 	background-color: #343434;
 }
 
-.form__wrapper {
-	display: flex;
-	justify-content: center;
-}
+
 
 
 
