--- a/css/styles/projects.css
+++ b/css/styles/projects.css
@@ -7,6 +7,7 @@
 	border-radius: 30px;
 	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, .25);
 	overflow: hidden;
+	border: 1px solid #000;
 }
 
 .project__item::after {
