--- a/css/media.css
+++ b/css/media.css
@@ -96,7 +96,7 @@
 
 	/* Header */
 	.header {
-		height: auto;
+		height: 600px;
 	}
 
 	.header__logo-img {
@@ -104,7 +104,7 @@
 	}
 
 	.header__content {
-		padding: 125px 0 50px;
+		padding: 260px 0 60px;
 	}
 
 	.header__text {
@@ -240,7 +240,7 @@
 	}
 
 	.section__contacts {
-		padding: 30px 0;
+		padding: 10px 0;
 		height: 460px;
 	}
 
@@ -265,8 +265,8 @@
 	}
 
 	.project__text {
-		font-size: 20px;
-		line-height: 29px;
+		font-size: 16px;
+		line-height: 20px;
 	}
 
 	/* Services */
