--- a/css/style.css
+++ b/css/style.css
@@ -52,23 +52,9 @@ p, h1, h2, h3 {
 	position: relative;
 	width: 100%;
 	height: 717px;
-	background: url(../img/contacts\ 2.png) no-repeat center;
+	background: url(../img/contacts__bg.png) no-repeat center;
 	background-size: cover;
-	/* border-radius: 30px; */
 }
-
-/* .section__contacts::before {
-	content: "";
-	position: absolute;
-	top: 0;
-	right: 0;
-	left: 0;
-	bottom: 0;
-	background-color: #303030;
-	opacity: .6;
-	z-index: 2;
-	border-radius: 30px;
-} */
 
 .section__title {
 	margin-bottom: 40px;
