--- a/css/styles/form.css
+++ b/css/styles/form.css
@@ -49,10 +49,14 @@
 	border: 1px solid #636363;
 }
 
+.form__footer {
+	text-align: center;
+}
+
 .form__button {
 	display: block;
-	background-color: #fcac45;
-	border: 1px solid #fcac45;
+	background-color: #fb8111;
+	border: 1px solid #fb8111;
 	color: #fff;
 	display: inline-block;
 	width: 80%;
