--- a/css/styles/form.css
+++ b/css/styles/form.css
@@ -55,8 +55,8 @@
 
 .form__button {
 	display: block;
-	background-color: #fb8111;
-	border: 1px solid #fb8111;
+	background-color: #fcac45;
+	border: 1px solid #fcac45;
 	color: #fff;
 	display: inline-block;
 	width: 80%;
